[build-system]
requires = [
    "setuptools",
    "wheel",
    "cython"
]

[project]
name = "hsmmlearn"
version = "0.1.1"
authors = [
  { name="Kristóf Müller", email="muller.kristof@itk.ppke.hu" }
]
description = "Hidden semi-Markov Models"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
dependencies = [
  "scipy>=1.9.3",
  "numpy>=1.25.2"
]

[project.urls]
Homepage = "https://github.com/mulkr/hsmmlearn/"
Repository = "https://github.com/mulkr/hsmmlearn.git"
Issues = "https://github.com/mulkr/hsmmlearn/issues"

[tool.setuptools]
packages = ["hsmmlearn"]